# pyproject.toml
[tool.poetry]
name = "historical_options_pipeline"
version = "0.1.0"
description = "historical_options_pipeline"
authors = ["Tim Siwula <siwulactim@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

# Scripts section - run with `poetry run start`
[tool.poetry.scripts]
start = "app.main:main"

# Dependencies
[tool.poetry.dependencies]
python = ">=3.13"
httpx = ">=0.28.1,<0.29.0"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.41,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
pydantic = ">=2.11.5,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
apscheduler = ">=3.11.0,<4.0.0"

# Dev dependencies
pydantic-settings = "^2.9.1"
uvicorn = "^0.34.3"
[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

# Build backend
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
